Teste de conexão com git

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
             </div>
             
             <div class="Cords">
-                <h1>Ponto maximo</h1>
+                <h1>Ponto máximo</h1>
                 <input type="number" name="coord-x" id="coord-x-3" step="0.01" placeholder="Coordenada X1:" required><br>
                 <input type="number" name="coord-y" id="coord-y-3" step="0.01" placeholder="Coordenada Y1:" required><br>
             </div>
