--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <h1>Area de parabolas de ponte</h1>
+    <h1>Área de parábolas de ponte</h1>
     <form method="post" action="/ajustar_parabola">
         <div class="areaCords">
             <div class="Cords">
